<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity1">

  <TextView
      android:id="@+id/tx1Ac1"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/tx1Ac1"
      android:textColor="@color/tx1Ac1"
      android:textSize="34sp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.2" />

  <EditText
      android:id="@+id/txPl1Ac1"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="32dp"
      android:ems="10"
      android:gravity="center"
      android:hint="@string/txPl1Ac1"
      android:inputType="text"
      android:minHeight="48dp"
      app:layout_constraintEnd_toEndOf="@+id/tx1Ac1"
      app:layout_constraintHorizontal_bias="1.0"
      app:layout_constraintStart_toStartOf="@+id/tx1Ac1"
      app:layout_constraintTop_toBottomOf="@+id/tx2Ac1" />

  <TextView
      android:id="@+id/tx2Ac1"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="32dp"
      android:gravity="center"
      app:layout_constraintEnd_toEndOf="@+id/tx1Ac1"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintStart_toStartOf="@+id/tx1Ac1"
      app:layout_constraintTop_toBottomOf="@+id/tx3Ac1" />

  <Button
      android:id="@+id/bt1Ac1"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:onClick="clMainActivity"
      android:text="@string/bt1Ac1"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="@+id/txPl1Ac1"
      app:layout_constraintStart_toStartOf="@+id/txPl1Ac1"
      app:layout_constraintTop_toBottomOf="@+id/txPl1Ac1"
      app:layout_constraintVertical_bias="0.15" />

  <TextView
      android:id="@+id/tx3Ac1"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="32dp"
      android:gravity="center"
      android:text="@string/tx3Ac1"
      app:layout_constraintEnd_toEndOf="@+id/tx1Ac1"
      app:layout_constraintStart_toStartOf="@+id/tx1Ac1"
      app:layout_constraintTop_toBottomOf="@+id/tx1Ac1" />
</androidx.constraintlayout.widget.ConstraintLayout>