<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tx1AcM"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tx1AcM"
        android:textColor="#B50606"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2" />

    <EditText
        android:id="@+id/txPl1AcM"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/txPl1AcM"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="@+id/tx1AcM"
        app:layout_constraintStart_toStartOf="@+id/tx1AcM"
        app:layout_constraintTop_toBottomOf="@+id/tx1AcM"
        tools:ignore="TouchTargetSizeCheck,TextContrastCheck"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/tx2AcM"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@+id/txPl1AcM"
        app:layout_constraintStart_toStartOf="@+id/txPl1AcM"
        app:layout_constraintTop_toBottomOf="@+id/txPl1AcM"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:onClick="openActivityOne"
        android:text="@string/bt1AcM"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/txPl1AcM"
        app:layout_constraintStart_toStartOf="@+id/txPl1AcM"
        app:layout_constraintTop_toBottomOf="@+id/txPl1AcM"
        app:layout_constraintVertical_bias="0.2" />
</androidx.constraintlayout.widget.ConstraintLayout>